[IDLE-107] test: 팔로워, 팔로잉 목록 조회 테스트